# pathland

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.txt
src/: audio.rs  graphics.rs  lib.rs  main.rs  shader.wgsl
src/graphics/: bayer.wgsl  dither.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
